--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,6 +5,12 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
+    <ImageButton
+        android:id="@+id/imageButton1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_camera" />
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
