--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,21 +16,13 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="5dp"
-        android:text="@string/select_intro"
+        android:text="@string/longpress"
         android:textStyle="bold" />
 
     <Gallery
         android:id="@+id/gallery"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="5dp"
-        android:text="@string/show_intro"
-        android:textStyle="italic" />
 
     <TableLayout
         android:layout_width="match_parent"
