--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,7 +4,15 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
     <ImageButton
         android:id="@+id/imageButton1"
         android:layout_width="match_parent"
@@ -47,7 +55,6 @@
                 android:inputType="text"
                 android:ems="10" >
 
-                <requestFocus />
             </EditText>
 
         </TableRow>
@@ -122,5 +129,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/btnEditSave" />
+
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
